@@ -1,24 +1,23 @@
-S3method(ALLEXTID,DO)
-S3method(EXTID2TERMID,DO)
-S3method(TERM2NAME,DO)
-S3method(TERMID2EXTID,DO)
 export(ALLEXTID)
-export(EXTID2NAME)
-export(EXTID2TERMID)
-export(TERM2NAME)
-export(TERMID2EXTID)
-export(cnetplot)
-export(enrich.internal)
-export(enrichDO)
-export(infoContentMethod)
-export(wangMethod)
 exportClasses(DOParams)
 exportClasses(enrichResult)
-exportMethods("setReadable<-")
+export(cnetplot)
+export(doSim)
+export(enrichDO)
+export(enrich.internal)
+export(EXTID2NAME)
+export(EXTID2TERMID)
+export(geneSim)
+export(infoContentMethod)
 exportMethods(plot)
+exportMethods("setReadable<-")
 exportMethods(show)
 exportMethods(sim)
 exportMethods(summary)
+export(simplot)
+export(TERM2NAME)
+export(TERMID2EXTID)
+export(wangMethod)
 importClassesFrom(methods,data.frame)
 importFrom(DO.db,DOANCESTOR)
 importFrom(DO.db,DOOFFSPRING)
@@ -28,27 +27,33 @@ importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,opts)
 importFrom(ggplot2,scale_fill_continuous)
+importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,theme_blank)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_text)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
-importFrom(igraph,"E<-")
-importFrom(igraph,"V<-")
-importFrom(igraph,E)
-importFrom(igraph,V)
 importFrom(igraph,degree)
+importFrom(igraph,"E<-")
+importFrom(igraph,E)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,layout.fruchterman.reingold)
 importFrom(igraph,plot.igraph)
 importFrom(igraph,tkplot)
+importFrom(igraph,"V<-")
+importFrom(igraph,V)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(plyr,.)
 importFrom(plyr,dlply)
 importFrom(qvalue,qvalue)
+importFrom(reshape2,melt)
 importFrom(scales,cscale)
 importFrom(scales,seq_gradient_pal)
 importFrom(stats4,plot)
@@ -59,3 +64,7 @@ importMethodsFrom(AnnotationDbi,mget)
 importMethodsFrom(AnnotationDbi,select)
 importMethodsFrom(AnnotationDbi,toTable)
 importMethodsFrom(DO.db,Term)
+S3method(ALLEXTID,DO)
+S3method(EXTID2TERMID,DO)
+S3method(TERM2NAME,DO)
+S3method(TERMID2EXTID,DO)
