@@ -1,9 +1,9 @@
 \docType{methods}
 \name{setReadable<-}
 \alias{setReadable}
-\alias{setReadable-methods}
 \alias{setReadable<-}
 \alias{setReadable<-,enrichResult,ANY-method}
+\alias{setReadable-methods}
 \title{Methods mapping gene ID to gene symbol for \code{enrichResult} instance}
 \arguments{
   \item{x}{A \code{enrichResult} instance.}
